[package]
name = "netparse"
version = "0.1.0"
authors = ["markpedersen"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.18", features = ["fs"]}
paste = "0.1.7"
ux = "0.1.3"
pnet = "0.25.0"
custom_debug_derive = "0.4.0"
derive-try-from-primitive = "0.1.0"
nom = "5.0.1"
cookie-factory = "0.3.1"
bitvec = "0.17.4"
