[package]
name = "netparse"
version = "0.1.0"
authors = ["markpedersen"]
edition = "2018"

[dependencies]
paste = "0.1.7"
pcap = "0.7.0"
custom_debug_derive = "0.4.0"
derive-try-from-primitive = "0.1.0"
nom = "5.0.1"
cookie-factory = "0.3.1"
bitvec = "0.17.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0.0" }
strum = "0.18.0"
strum_macros = "0.18.0"